Disable conflict detection in ItemSync for now.

We currently have no way yet to handle LR conflicts, and there are cases
where this can actually dead-lock the ItemSync/TransactionSequence
combination.

BUG: 248554

svn path=/trunk/KDE/kdepimlibs/; revision=1168799